--- a/build.settings
+++ b/build.settings
@@ -9,3 +9,6 @@ PRINT_FILES_COPYING=false
 PRINT_FILES_LINKING=false
 PRINT_FILES_GENERATING=false
 PRINT_FILES_OPTIMIZING=false
+
+NOERROR_MISSING_ICON=true
+WARN_MISSING_ICON=true
